--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -2,7 +2,7 @@
 
 .hero {
     padding-block: 64px 100px;
-    background-image: url(../images/fundo.png);
+    background-image: url(../images/foto\ aniversario.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
